--- a/src/components/ProjectDetail/ProjectDetail.css
+++ b/src/components/ProjectDetail/ProjectDetail.css
@@ -1,4 +1,4 @@
 .project-detail-card:hover {
-    background-color: rgb(63, 21, 21);
+    background-color: rgb(1, 0, 7) !important; 
     width: 1.2em;
 }
