--- a/src/components/ProjectDetail/ProjectDetail.css
+++ b/src/components/ProjectDetail/ProjectDetail.css
@@ -1,4 +1,14 @@
 .project-detail-card:hover {
     background-color: rgb(1, 0, 7) !important; 
-    width: 1.2em;
+    position: relative !important;
+    animation-name: example !important;
+    animation-duration: 3s !important;
+    animation-delay: .5s !important;
+}
+@keyframes example {
+    0%   {background-color:red; left:10px; top:-10px;}
+    25%  {background-color:yellow; left:20px; top:-20px;}
+    50%  {background-color:blue; left:20px; top:-20px;}
+    75%  {background-color:green; left:20px; top:-20px;}
+    100% {background-color:red; left:20px; top:-20px;}
 }
