--- a/src/components/ProjectDetail/ProjectDetail.css
+++ b/src/components/ProjectDetail/ProjectDetail.css
@@ -4,11 +4,12 @@
     animation-name: example !important;
     animation-duration: 2s !important;
     animation-delay: .5s !important;
+    font-size: 1.3em !important;
 }
 @keyframes example {
-    0%   {background-color:red; left:10px; top:-10px;}
-    25%  {background-color:yellow; left:20px; top:-20px;}
-    50%  {background-color:blue; left:20px; top:-20px;}
-    75%  {background-color:green; left:20px; top:-20px;}
-    100% {background-color:red; left:20px; top:-20px;}
+    0%   {background-color:red; left:0px; top:-20px;}
+    25%  {background-color:yellow; left:0px; top:-40px;}
+    50%  {background-color:blue; left:0px; top:-40px;}
+    75%  {background-color:green; left:0px; top:-40px;}
+    100% {background-color:red; left:0px; top:-40px;}
 }
